# QtSu

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  remakesourcelist
QtSu/: flagsandlibs
QtSu/MakeSuWrap/: Makefile.am  suwrap.cpp
QtSu/app/: Makefile.am
QtSu/resources/man/: qtsu.1  qtsu.mpz
QtSu/src/: internet.cpp  internet.h  main.cpp
